--- a/css/general.css
+++ b/css/general.css
@@ -106,7 +106,7 @@ p {
 
 @media screen and (min-width: 800px) {
   h1 {
-    font-size: 4rem;
+    font-size: 3rem;
   }
 
   h2 {
@@ -171,4 +171,13 @@ p {
   .section-center {
     width: 95vw;
   }
+}
+
+.underline {
+  width: 5rem;
+  height: 0.25rem;
+  margin-bottom: 1.25rem;
+  background: var(--clr-primary);
+  margin-left: auto;
+  margin-right: auto;
 }
