--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   padding: 1rem;
   display: grid;
   align-items: center;
+  background: var(--clr-grey-10);
   transition: var(--transition);
 }
 
@@ -26,7 +27,7 @@
 
 .brand-logo {
   color: var(--clr-secondary);
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: 700;
 }
 
@@ -44,10 +45,6 @@
 }
 
 @media screen and (min-width: 768px) {
-  .nav {
-    /* background: var(--clr-primary-lightest); */
-  }
-
   .nav-btn {
     display: none;
   }
@@ -87,7 +84,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  background: var(--white);
+  background: #fff;
   z-index: 2;
   box-shadow: var(--light-shadow);
 }
@@ -164,9 +161,74 @@
   transform: translateX(0);
 }
 
-/* hero */
+/* hero section */
 
 .hero {
-  /* background: yellow; */
-  min-height: 130vh;
+  background: var(--clr-grey-10);
+}
+
+.hero-center {
+  min-height: calc(100vh - 5rem);
+  display: grid;
+  place-items: center;
+}
+
+.hero .underline {
+  margin-bottom: 0.5rem;
+  margin-left: 0;
+}
+
+.hero-img {
+  display: none;
+}
+
+.hero-info h1,
+.hero-info p {
+  color: var(--clr-secondary);
+}
+
+.hero-info p {
+  width: 300px;
+}
+
+.hero-info h4 {
+  color: var(--clr-primary);
+}
+
+.hero-icons {
+  justify-items: start;
+}
+
+@media screen and (min-width: 992px) {
+  .hero-center {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .hero-info p {
+    width: 100%;
+  }
+
+  .hero-img {
+    display: block;
+    position: relative;
+  }
+
+  .hero-img::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 0.25rem solid var(--clr-primary);
+    top: 2rem;
+    right: -2rem;
+    border-radius: var(--radius);
+  }
+
+  .hero-photo {
+    max-width: 25rem;
+    max-height: 30rem;
+    object-fit: cover;
+    border-radius: var(--radius);
+    position: relative;
+  }
 }
