--- a/css/styles.css
+++ b/css/styles.css
@@ -257,6 +257,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  box-shadow: var(--light-shadow);
   transition: all 0.3s ease-in-out;
   opacity: 0;
 }
@@ -275,10 +276,9 @@
 }
 
 .img {
-  height: 55vh;
   object-fit: cover;
   background: #fff;
-  box-shadow: var(--dark-shadow);
+  justify-self: center;
 }
 
 .project-content {
@@ -344,11 +344,15 @@
 
 @media screen and (min-width: 768px) {
   .slide-container {
-    height: 50vh;
+    height: 47vh;
   }
 
   .slide {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .img {
+    object-fit: cover;
   }
 
   .project-content {
@@ -443,15 +447,14 @@
   margin: 5rem 0;
   display: grid;
   place-items: center;
-  -webkit-clip-path:
-    polygon(
-      50% 0%,
-      100% 10%,
-      100% 90%,
-      50% 100%,
-      0 90%,
-      0 10%
-    );
+  -webkit-clip-path: polygon(
+    50% 0%,
+    100% 10%,
+    100% 90%,
+    50% 100%,
+    0 90%,
+    0 10%
+  );
   clip-path: polygon(50% 0%, 100% 10%, 100% 90%, 50% 100%, 0 90%, 0 10%);
 }
 
