--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@
 
 .sidebar-links a:hover {
   color: var(--clr-primary);
+  transform: scale(1.05);
 }
 
 .social-icons {
@@ -137,8 +138,13 @@
   transition: var(--transition);
 }
 
-.social-icon:hover {
+.social-icons i {
+  transition: var(--transition);
+}
+
+.social-icons i:hover {
   color: var(--clr-primary);
+  transform: scale(1.2);
 }
 
 .close-btn {
@@ -246,6 +252,13 @@
   position: relative;
   height: 80vh;
   overflow: hidden;
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
+    0 2px 6px 2px rgba(60, 64, 67, 0.15);
+  transition: var(--transition);
+}
+
+.slide-container:hover {
+  transform: scale(1.05);
 }
 
 .slide {
@@ -312,6 +325,12 @@
   text-transform: capitalize;
   border-radius: 5px;
   color: var(--clr-primary);
+  transition: var(--transition);
+  cursor: pointer;
+}
+
+.stacks li:hover {
+  transform: scale(1.1);
 }
 
 .project-btns {
@@ -402,6 +421,12 @@
   -webkit-transition: var(--transition);
   transition: var(--transition);
   border: 1px solid #c1c7d0;
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
+    0 2px 6px 2px rgba(60, 64, 67, 0.15);
+}
+
+.service:hover {
+  transform: scale(1.05);
 }
 
 .service-icon {
@@ -447,15 +472,14 @@
   margin: 5rem 0;
   display: grid;
   place-items: center;
-  -webkit-clip-path:
-    polygon(
-      50% 0%,
-      100% 10%,
-      100% 90%,
-      50% 100%,
-      0 90%,
-      0 10%
-    );
+  -webkit-clip-path: polygon(
+    50% 0%,
+    100% 10%,
+    100% 90%,
+    50% 100%,
+    0 90%,
+    0 10%
+  );
   clip-path: polygon(50% 0%, 100% 10%, 100% 90%, 50% 100%, 0 90%, 0 10%);
 }
 
@@ -540,6 +564,23 @@
   place-items: center;
   padding: 2rem 0;
   gap: 1rem;
+  position: relative;
+}
+
+.btn-scroll-top {
+  position: absolute;
+  right: 1rem;
+  top: 0;
+  font-size: 2rem;
+  cursor: pointer;
+  color: var(--clr-secondary);
+  animation: bounce 0.3s infinite alternate;
+  transition: var(--transition);
+  margin-bottom: 2rem;
+}
+
+.btn-scroll-top:hover {
+  color: var(--clr-primary);
 }
 
 .footer .social-icons,
@@ -549,4 +590,10 @@
 
 .footer p {
   text-align: center;
+}
+
+@keyframes bounce {
+  to {
+    transform: scale(1.2);
+  }
 }
