--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,8 @@
   position: relative;
   height: 80vh;
   overflow: hidden;
-  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
+  box-shadow:
+    0 1px 2px 0 rgba(60, 64, 67, 0.3),
     0 2px 6px 2px rgba(60, 64, 67, 0.15);
   transition: var(--transition);
 }
@@ -327,10 +328,6 @@
   color: var(--clr-primary);
   transition: var(--transition);
   cursor: pointer;
-}
-
-.stacks li:hover {
-  transform: scale(1.1);
 }
 
 .project-btns {
@@ -421,7 +418,8 @@
   -webkit-transition: var(--transition);
   transition: var(--transition);
   border: 1px solid #c1c7d0;
-  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
+  box-shadow:
+    0 1px 2px 0 rgba(60, 64, 67, 0.3),
     0 2px 6px 2px rgba(60, 64, 67, 0.15);
 }
 
@@ -442,6 +440,10 @@
 
 .service ul li {
   background: #fff;
+}
+
+.stacks li:hover {
+  transform: scale(1.1);
 }
 
 @media screen and (min-width: 676px) {
@@ -472,14 +474,15 @@
   margin: 5rem 0;
   display: grid;
   place-items: center;
-  -webkit-clip-path: polygon(
-    50% 0%,
-    100% 10%,
-    100% 90%,
-    50% 100%,
-    0 90%,
-    0 10%
-  );
+  -webkit-clip-path:
+    polygon(
+      50% 0%,
+      100% 10%,
+      100% 90%,
+      50% 100%,
+      0 90%,
+      0 10%
+    );
   clip-path: polygon(50% 0%, 100% 10%, 100% 90%, 50% 100%, 0 90%, 0 10%);
 }
 
